@@ -260,6 +260,7 @@ for(;;)
     case OP_ASSERTBACK:
     case OP_ASSERTBACK_NOT:
     case OP_ONCE:
+    case OP_ONCE_NC: 
     case OP_COND:
     case OP_SCOND:
     case OP_REVERSE:
